RESOLVED FIXED41869
Fix adoptRef usage violation in IDBObjectStoreRequest
https://bugs.webkit.org/show_bug.cgi?id=41869
Summary Fix adoptRef usage violation in IDBObjectStoreRequest
Vitaly Repeshko
Reported 2010-07-08 09:56:57 PDT
Fix adoptRef usage violation in IDBObjectStoreRequest
Attachments
patch (1.18 KB, patch)
2010-07-08 09:59 PDT, Vitaly Repeshko
pfeldman: review+
Vitaly Repeshko
Comment 1 2010-07-08 09:59:15 PDT
Vitaly Repeshko
Comment 2 2010-07-08 10:02:03 PDT
M WebCore/ChangeLog M WebCore/storage/IDBObjectStoreRequest.cpp Committed r62795
Note You need to log in before you can comment on or make changes to this bug.