2010-07-08  Vitaly Repeshko  <vitalyr@chromium.org>

Reviewed by Pavel Feldman.

        Fix adoptRef usage violation in IDBObjectStoreRequest
        https://bugs.webkit.org/show_bug.cgi?id=41869

        * storage/IDBObjectStoreRequest.cpp:
        (WebCore::IDBObjectStoreRequest::IDBObjectStoreRequest):


Canonical link: https://commits.webkit.org/53690@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@62795 268f45cc-cd09-0410-ab3c-d52691b4dbfc